--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-masked-view/masked-view": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.0.0-next.2",
     "@react-navigation/native": "^6.0.0-next.1",
