--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-svg": "^12.1.0",
+    "react-native-swift": "^1.2.3",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.0.0",
+    "react-native-track-player": "^1.2.6",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
@@ -43,5 +45,6 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "isSwift": true
 }
