--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "react-native": "0.64.0",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.27.1",
     "react-native-pager-view": "^5.1.2",
     "react-native-reanimated": "^2.0.0",
+    "react-native-redash": "^16.0.8",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.0.0",
     "react-native-vector-icons": "^8.1.0"
