--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-pager-view": "^5.1.2",
     "react-native-reanimated": "^2.0.0",
     "react-native-redash": "^16.0.8",
+    "react-native-render-html": "^5.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-svg": "^12.1.0",
