--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-render-html": "^5.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-shared-element": "^0.7.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-swift": "^1.2.3",
