--- a/ios/musei/Info.plist
+++ b/ios/musei/Info.plist
@@ -68,6 +68,10 @@
 		<string>Gilroy-Regular.ttf</string>
 		<string>GT-Super-Display-Medium.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
