--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.0.0",
     "react-native-track-player": "^1.2.6",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-navigation-shared-element": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
