--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-native-tab-view": "^3.0.0",
     "react-native-track-player": "^1.2.6",
     "react-native-vector-icons": "^8.1.0",
-    "react-navigation-shared-element": "^2.3.1"
+    "react-navigation": "^4.4.4",
+    "react-navigation-shared-element": "^2.3.1",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
