--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/netinfo": "^6.0.0",
+    "@react-native-firebase/app": "^11.1.2",
+    "@react-native-firebase/auth": "^11.1.2",
     "@react-native-masked-view/masked-view": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.0.0-next.2",
     "@react-navigation/native": "^6.0.0-next.1",
